--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "author": "Adrian Cebanica",
   "license": "MIT",
   "dependencies": {
+    "argparse": "^1.0.10",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "deepspeech": "0.8.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
     "fs-extra": "^9.0.1",
     "morgan": "^1.10.0",
-    "argparse": "^1.0.10",
-    "deepspeech": "0.8.0",
     "node-wav": "0.0.2",
+    "pug": "^3.0.0",
     "sox-stream": "^2.0.3",
     "util": "^0.11.1"
   },
