--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "API - video to text",
   "main": "app.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node app",
+    "start": "node app.js",
     "dev": "cross-env NODE_ENV=development nodemon app",
     "postinstall": "node ./config/post-install.js"
+  },
+  "engines": {
+    "node": ">=8.0.0"
   },
   "author": "Adrian Cebanica",
   "license": "MIT",
@@ -14,6 +17,7 @@
     "argparse": "^1.0.10",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
     "deepspeech": "0.8.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -26,7 +30,6 @@
     "util": "^0.11.1"
   },
   "devDependencies": {
-    "cross-env": "^7.0.2",
     "nodemon": "^2.0.4"
   }
 }
