--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.10.0",
     "node-wav": "0.0.2",
     "pug": "^3.0.0",
+    "sox": "^0.1.0",
     "sox-stream": "^2.0.3",
     "util": "^0.11.1"
   },
