--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API - video to text",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "pm2 start app.js",
     "dev": "cross-env NODE_ENV=development nodemon app",
     "postinstall": "node ./config/post-install.js"
   },
@@ -25,6 +25,7 @@
     "fs-extra": "^9.0.1",
     "morgan": "^1.10.0",
     "node-wav": "0.0.2",
+    "pm2": "^4.4.1",
     "pug": "^3.0.0",
     "sox": "^0.1.0",
     "sox-stream": "^2.0.3",
